Version 2.12.0
- Lexer/Grammar based search and replace

Version 2.11.2
- help page updated, '_' key deletes features of active word

Version 2.11.1
- shortcut display (key '?') corrected

Version 2.11.0
- added subtree search (in ConLL-U or sd-parse format)
- importing subtrees of a given word
- tests

Version 2.10.3
- sort features case insensitive in all cases (even when duplicating a token)

Version 2.10.2
- bug in maven tests corrected (using --saveAfter 1 in tests to have output file written immediately)

Version 2.10.1
- shortcuts can have any length, shortcuts to set Feature=Value pairs
- new tests

Version 2.10.0
- new default for saving: without the option --saveAfter the conllu file is saved whenever a new sentence is chosen (next, prec, ...)
  the old behaviour (save every modification immediately) can be achieved using the option --saveAfter 1
- shortcuts can be defined for two keys
- "mod compose startid length [form]" optional form of the new MTW

Version 2.9.1
- correction: replace "\n" in MISC:SpacesAfter= by space in "# text = " line

Version 2.9.0
- options --features and --deprels can read official specifications for valid features and deprels
  in https://github.com/UniversalDependencies/tools/tree/master/data (features.json and deprels.json)
- new option --language (to read the feature/deprel definitions for a given language (if not given, use only universal features/deprels)
- new option --include_unused (use features declared as unusued for given language)

Version 2.8.2
- help text slightly corrected

Version 2.8.1
- process SpacesBefore correctly
- junit 4.12 -> 4.13.1

Version 2.8.0
- add --compare option to Docker image
- make MISC autocompletion work when editing MTW
- new command to transform existing word in MTW
- new tests

Version 2.7.5
- Warning improved
- bug corrected in MTW creation (delete Space(s)After from MTW member tokens and add value from last memeber token to the MTW token